src/App.css
.dice-container {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    width: 80%;
    gap: 1rem;
    justify-content: center;
}

main {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: column;
}

button {
    font-family: Karla, sans-serif;
    cursor: pointer;
}

.die {
    width: 50px;
    height: 50px;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
    border: none;
    background-color: white;
    border-radius: 10px;
    font-size: 1.75rem;
    font-weight: 600;
}

h1 {
    font-size: 50px;
    margin: 0;
}

.instructions {
    font-weight: 400;
    margin-top: 0;
    text-align: center;
}

button.roll {
    background-color: #5035FF;
    padding: 10px 20px;
    white-space: nowrap;
    width: auto;
    height: 50px;
    border-radius: 10px;
    border: none;
    color: #FFFFFF;
    font-size: 1.5rem;
    font-weight: 600;
    margin-top: 30px;
}

.game-won {
    color: goldenrod;
    font-weight: bold;
}

